Add console version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,23 +5,23 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # ===========================================
-# CORRECT ABSOLUTE PATHS (FIXED)
+# SDL3 PATHS (UPDATED STRUCTURE)
 # ===========================================
-set(SDL2_ROOT "C:/Program Files/msys64/home/daria/libs/SDL2-2.28.5")
-set(SDL2_TTF_ROOT "C:/Program Files/msys64/home/daria/libs/SDL2_ttf-2.20.2")
+set(SDL3_ROOT "C:/Program Files/msys64/home/daria/libs/SDL3-devel-3.2.2-mingw/SDL3-3.2.2")
+set(SDL3_TTF_ROOT "C:/Program Files/msys64/home/daria/libs/SDL3_ttf-devel-3.2.2-mingw/SDL3_ttf-3.2.2")
 
-set(SDL2_INCLUDE_DIR "${SDL2_ROOT}/x86_64-w64-mingw32/include")
-set(SDL2_TTF_INCLUDE_DIR "${SDL2_TTF_ROOT}/x86_64-w64-mingw32/include")
+set(SDL3_INCLUDE_DIR "${SDL3_ROOT}/x86_64-w64-mingw32/include")
+set(SDL3_TTF_INCLUDE_DIR "${SDL3_TTF_ROOT}/x86_64-w64-mingw32/include")
 
-set(SDL2_LIB_DIR "${SDL2_ROOT}/x86_64-w64-mingw32/lib")
-set(SDL2_TTF_LIB_DIR "${SDL2_TTF_ROOT}/x86_64-w64-mingw32/lib")
+set(SDL3_LIB_DIR "${SDL3_ROOT}/x86_64-w64-mingw32/lib")
+set(SDL3_TTF_LIB_DIR "${SDL3_TTF_ROOT}/x86_64-w64-mingw32/lib")
 
 # ===========================================
 # INCLUDE DIRECTORIES
 # ===========================================
 include_directories("include")
-include_directories("${SDL2_INCLUDE_DIR}")
-include_directories("${SDL2_TTF_INCLUDE_DIR}")
+include_directories("${SDL3_INCLUDE_DIR}")
+include_directories("${SDL3_TTF_INCLUDE_DIR}")
 
 # ===========================================
 # SOURCE FILES
@@ -37,8 +37,7 @@ add_executable(TileTwister ${SOURCES})
 # LINK LIBRARIES
 # ===========================================
 target_link_libraries(TileTwister
-    "${SDL2_LIB_DIR}/libSDL2main.a"
-    "${SDL2_LIB_DIR}/libSDL2.dll.a"
-    "${SDL2_TTF_LIB_DIR}/libSDL2_ttf.dll.a"
+    "${SDL3_LIB_DIR}/libSDL3.dll.a"
+    "${SDL3_TTF_LIB_DIR}/libSDL3_ttf.dll.a"
     mingw32
 )
